# intro-to-ml

./: 404.html  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  retype.yml  robots.txt
.github/workflows/: retype-action.yml
Assignments/: Assignment-1-completed.ipynb  Assignment-1-completed.md  Assignment-1.ipynb  assignment-1.md
Example-End-to-End-ML-Project/: example-end-to-end-ml-project.md  index.yml
Fundamentals of Machine Learning/: vocabulary.md
Fundamentals-of-ML/: mathematical-concepts.md  types-of-learning.md  types-of-ml.md  vocabulary.md
Introduction/: ml process overview.md  ml-process-overview.md  what is ML?.md  what-is-ML?.md
Introduction to Machine Learning/: what is ML?.md
assignments/assignment-1/: index.html
assignments/assignment-1-completed/: index.html
example-end-to-end-ml-project/: index.html
fundamentals-of-machine-learning/: index.html
fundamentals-of-machine-learning/vocabulary/: index.html
fundamentals-of-ml/: index.html
fundamentals-of-ml/mathematical-concepts/: index.html
fundamentals-of-ml/types-of-learning/: index.html
fundamentals-of-ml/types-of-ml/: index.html
fundamentals-of-ml/vocabulary/: index.html
introduction/: index.html
introduction-to-machine-learning/: index.html
introduction-to-machine-learning/what-is-ml/: index.html
introduction/ml-process-overview/: index.html
introduction/what-is-ml/: index.html
resources/js/: config.js  search.json
something/: index.html
